--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,6 @@
 ACCOUNT_KEY=
 AZURE_STORAGE_ACCOUNT=
 AZURE_STORAGE_CONTAINER=
-subscription_id = 
-resource_group_name = 
-CONNECTION_STRING =
-
+subscription_id=
+resource_group_name=
+CONNECTION_STRING=DefaultEndpointsProtocol=
